--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "gatsby-source-datocms": "^2.0.1",
+    "prettier": "^1.15.2",
+    "slash": "^2.0.0"
   },
   "repository": {
     "type": "git",
