--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run:
         name: install dependencies
-        command: npm install
+        command: yarn
 
       - save_cache:
           paths:
