--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "gatsby build"
   },
   "devDependencies": {
     "gatsby-source-datocms": "^2.0.1",
